--- a/index.html
+++ b/index.html
@@ -419,30 +419,22 @@
                         </table>
                     </div>
                  </div>
+            </div>
 
-                 <!-- NOVO: Performance Geográfica (Por Estado) -->
-                 <div class="glass-panel p-8 mt-6">
-                    <div class="flex justify-between items-center mb-6">
-                        <h3 class="font-bold text-lg text-slate-800">Performance Geográfica (Por Estado)</h3>
-                        <p class="text-sm text-slate-500">Distribuição geográfica automática.</p>
-                    </div>
-                    <div class="flex justify-between items-center mb-4">
-                        <div class="flex items-center gap-6 text-sm bg-white px-4 py-2 rounded-full border shadow-sm">
-                            <span class="flex items-center gap-2 font-medium text-slate-600"><span class="w-3 h-3 rounded-full bg-green-500 shadow-lg shadow-green-200 inline-block"></span> Fechados</span>
-                            <span class="flex items-center gap-2 font-medium text-slate-600"><span class="w-3 h-3 rounded-full bg-orange-500 shadow-lg shadow-orange-200 inline-block"></span> Em Andamento</span>
-                            <span class="flex items-center gap-2 font-medium text-slate-600"><span class="w-3 h-3 rounded-full bg-red-500 shadow-lg shadow-red-200 inline-block"></span> Perdido</span>
-                        </div>
-                    </div>
-                    <div class="flex-1 relative bg-slate-100 rounded-2xl overflow-hidden shadow-inner border border-slate-200 ring-4 ring-white h-[600px]">
-                         <div class="w-full h-full relative">
-                             <div id="mapContainer"></div>
-                             <div v-if="loadingMap" class="absolute inset-0 flex items-center justify-center text-slate-500 bg-white/80 z-50">
-                                <i class="fa-solid fa-satellite-dish fa-spin mr-2 text-blue-500"></i> Carregando coordenadas...
-                            </div>
-                         </div>
-                    </div>
-                 </div>
+            <!-- MAPA RESTAURADO (TELA CHEIA) -->
+            <div v-if="view === 'mapa'" class="flex-1 flex flex-col h-full relative animate-fade-in p-6">
+                <div class="glass-panel w-full h-full p-0 overflow-hidden relative shadow-2xl border-0">
+                     <div id="mapContainer" class="w-full h-full z-10"></div>
+                     
+                     <div class="absolute top-4 left-4 z-[500] bg-white/90 backdrop-blur px-4 py-3 rounded-xl shadow-lg border border-slate-200">
+                        <h3 class="font-bold text-slate-700 text-sm"><i class="fa-solid fa-location-dot text-blue-500 mr-2"></i>Mapa de Calor</h3>
+                        <p class="text-[10px] text-slate-500 mt-1">{{ leads.length }} leads mapeados</p>
+                     </div>
 
+                     <div v-if="loadingMap" class="absolute inset-0 flex items-center justify-center text-slate-500 bg-white/80 z-50">
+                        <i class="fa-solid fa-satellite-dish fa-spin mr-2 text-blue-500"></i> Carregando satélite...
+                    </div>
+                </div>
             </div>
 
             <!-- PIPELINE -->
