--- a/index.html
+++ b/index.html
@@ -418,28 +418,56 @@
                     </div>
                  </div>
 
-                 <!-- RESTAURADO: Performance Geográfica (NO DASHBOARD) -->
+                 <!-- RESTAURADO: Performance Geográfica (DESCRITIVO/TABELA) -->
                  <div class="glass-panel p-8 mt-6">
                     <div class="flex justify-between items-center mb-6">
                         <h3 class="font-bold text-lg text-slate-800">Performance Geográfica (Por Estado)</h3>
-                        <p class="text-sm text-slate-500">Distribuição geográfica automática.</p>
+                        <p class="text-sm text-slate-500">Relatório descritivo de leads por região.</p>
                     </div>
-                    <div class="flex justify-between items-center mb-4">
-                         <!-- Legend -->
-                        <div class="flex items-center gap-6 text-sm bg-white px-4 py-2 rounded-full border shadow-sm">
-                            <span class="flex items-center gap-2 font-medium text-slate-600"><span class="w-3 h-3 rounded-full bg-green-500 shadow-lg shadow-green-200 inline-block"></span> Fechados</span>
-                            <span class="flex items-center gap-2 font-medium text-slate-600"><span class="w-3 h-3 rounded-full bg-orange-500 shadow-lg shadow-orange-200 inline-block"></span> Em Andamento</span>
-                            <span class="flex items-center gap-2 font-medium text-slate-600"><span class="w-3 h-3 rounded-full bg-red-500 shadow-lg shadow-red-200 inline-block"></span> Perdido</span>
-                        </div>
-                    </div>
-                    <div class="flex-1 relative bg-slate-100 rounded-2xl overflow-hidden shadow-inner border border-slate-200 ring-4 ring-white h-[500px]">
-                            <div class="w-full h-full relative">
-                                <!-- ID DIFERENTE para não conflitar com a view 'mapa' -->
-                                <div id="dashboardMapContainer"></div>
-                                <div v-if="loadingMap" class="absolute inset-0 flex items-center justify-center text-slate-500 bg-white/80 z-50">
-                                    <i class="fa-solid fa-satellite-dish fa-spin mr-2 text-blue-500"></i> Carregando mapa...
-                                </div>
-                            </div>
+                    
+                    <div class="overflow-x-auto max-h-[400px] overflow-y-auto custom-scrollbar">
+                        <table class="w-full text-sm text-left border-collapse">
+                            <thead class="text-xs text-slate-400 font-bold uppercase border-b border-slate-100 sticky top-0 bg-white z-10">
+                                <tr>
+                                    <th class="px-4 py-3">Estado</th>
+                                    <th class="px-4 py-3 text-center">Total Leads</th>
+                                    <th class="px-4 py-3 text-center">Vendas (Fechados)</th>
+                                    <th class="px-4 py-3 text-center">Em Andamento</th>
+                                    <th class="px-4 py-3 text-right">Participação</th>
+                                </tr>
+                            </thead>
+                            <tbody class="divide-y divide-slate-50">
+                                <tr v-for="stat in statsPorEstado" :key="stat.estado" class="hover:bg-slate-50 transition">
+                                    <td class="px-4 py-3 font-bold text-slate-700 flex items-center gap-2">
+                                        <div class="w-8 h-8 rounded-lg bg-indigo-50 text-indigo-600 flex items-center justify-center font-bold text-xs border border-indigo-100">
+                                            {{ stat.estado }}
+                                        </div>
+                                    </td>
+                                    <td class="px-4 py-3 text-center font-medium text-slate-600">{{ stat.total }}</td>
+                                    <td class="px-4 py-3 text-center">
+                                        <span v-if="stat.fechados > 0" class="px-2 py-1 bg-green-100 text-green-700 rounded-md font-bold text-xs">{{ stat.fechados }}</span>
+                                        <span v-else class="text-slate-300">-</span>
+                                    </td>
+                                    <td class="px-4 py-3 text-center">
+                                         <span v-if="stat.andamento > 0" class="px-2 py-1 bg-orange-100 text-orange-700 rounded-md font-bold text-xs">{{ stat.andamento }}</span>
+                                         <span v-else class="text-slate-300">-</span>
+                                    </td>
+                                    <td class="px-4 py-3 text-right">
+                                        <div class="flex items-center justify-end gap-2">
+                                            <span class="text-xs font-bold text-slate-500">{{ filteredDashboardLeads.length ? ((stat.total / filteredDashboardLeads.length) * 100).toFixed(1) : 0 }}%</span>
+                                            <div class="w-16 h-1.5 bg-slate-100 rounded-full overflow-hidden">
+                                                <div class="h-full bg-indigo-500" :style="{width: (filteredDashboardLeads.length ? ((stat.total / filteredDashboardLeads.length) * 100) : 0) + '%'}"></div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr v-if="statsPorEstado.length === 0">
+                                    <td colspan="5" class="text-center py-8 text-slate-400 text-xs italic">
+                                        Nenhum dado geográfico disponível para os filtros atuais.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
