--- a/index.html
+++ b/index.html
@@ -388,6 +388,128 @@
 
         <div class="flex-1 overflow-auto p-8 relative flex flex-col scroll-smooth">
 
+            <!-- DASHBOARD COMPLETO (RESTAURADO) -->
+            <div v-if="view === 'dashboard'" class="grid grid-cols-1 md:grid-cols-12 gap-6 animate-fade-in">
+                <!-- KPI Cards Row -->
+                <div class="col-span-12 grid grid-cols-1 md:grid-cols-4 gap-6">
+                    <!-- Card 1: Total Leads -->
+                    <div class="glass-panel p-6 flex items-center justify-between border-b-4 border-blue-500">
+                        <div>
+                            <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">Leads Totais</p>
+                            <h3 class="text-3xl font-extrabold text-slate-800">{{ filteredDashboardLeads.length }}</h3>
+                            <p class="text-[10px] text-slate-400 mt-1">
+                                <span class="text-green-500 font-bold"><i class="fa-solid fa-arrow-up"></i> Novos</span> no período
+                            </p>
+                        </div>
+                        <div class="w-12 h-12 rounded-2xl bg-blue-50 text-blue-600 flex items-center justify-center text-xl shadow-sm">
+                            <i class="fa-solid fa-users"></i>
+                        </div>
+                    </div>
+                    <!-- Card 2: Estimado -->
+                    <div class="glass-panel p-6 flex items-center justify-between border-b-4 border-indigo-500">
+                         <div>
+                            <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">Pipeline (R$)</p>
+                            <h3 class="text-2xl font-extrabold text-slate-800">{{ formatMoeda(totalEstimado) }}</h3>
+                            <p class="text-[10px] text-slate-400 mt-1">Em negociação</p>
+                        </div>
+                        <div class="w-12 h-12 rounded-2xl bg-indigo-50 text-indigo-600 flex items-center justify-center text-xl shadow-sm">
+                            <i class="fa-solid fa-sack-dollar"></i>
+                        </div>
+                    </div>
+                    <!-- Card 3: Realizado -->
+                    <div class="glass-panel p-6 flex items-center justify-between border-b-4 border-green-500">
+                         <div>
+                            <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">Fechado (R$)</p>
+                            <h3 class="text-2xl font-extrabold text-green-600">{{ formatMoeda(totalRealizado) }}</h3>
+                            <p class="text-[10px] text-slate-400 mt-1">
+                                <span class="text-green-600 font-bold">{{ taxaFechamento }}%</span> de conversão
+                            </p>
+                        </div>
+                        <div class="w-12 h-12 rounded-2xl bg-green-50 text-green-600 flex items-center justify-center text-xl shadow-sm">
+                            <i class="fa-solid fa-check-circle"></i>
+                        </div>
+                    </div>
+                    <!-- Card 4: Ciclo -->
+                    <div class="glass-panel p-6 flex items-center justify-between border-b-4 border-orange-500">
+                         <div>
+                            <p class="text-xs font-bold text-slate-400 uppercase tracking-widest">Ciclo Médio</p>
+                            <h3 class="text-3xl font-extrabold text-slate-800">{{ cicloMedioVendas }} <span class="text-sm font-medium text-slate-400">dias</span></h3>
+                             <p class="text-[10px] text-slate-400 mt-1">Tempo até fechar</p>
+                        </div>
+                        <div class="w-12 h-12 rounded-2xl bg-orange-50 text-orange-600 flex items-center justify-center text-xl shadow-sm">
+                            <i class="fa-solid fa-stopwatch"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Row 2: Charts & Map -->
+                <div class="col-span-12 md:col-span-8 grid grid-cols-1 gap-6">
+                    <!-- Funnel Chart -->
+                    <div class="glass-panel p-6 min-h-[400px] flex flex-col">
+                        <h4 class="font-bold text-slate-700 mb-6 flex items-center gap-2">
+                            <i class="fa-solid fa-chart-simple text-blue-500"></i> Funil de Vendas (Etapas)
+                        </h4>
+                        <div class="flex-1 relative">
+                            <canvas id="chartEtapas"></canvas>
+                        </div>
+                    </div>
+                    
+                    <!-- Map Small -->
+                    <div class="glass-panel p-0 min-h-[350px] relative overflow-hidden flex flex-col">
+                        <div class="absolute top-4 left-4 z-[400] bg-white/90 backdrop-blur px-4 py-2 rounded-lg shadow-sm">
+                             <h4 class="font-bold text-slate-700 text-sm flex items-center gap-2">
+                                <i class="fa-solid fa-map-location-dot text-indigo-500"></i> Mapa de Calor
+                            </h4>
+                        </div>
+                        <div id="dashboardMapContainer" class="w-full h-full min-h-[350px]"></div>
+                    </div>
+                </div>
+
+                <!-- Row 3: Right Sidebar (Origin & Ranking) -->
+                <div class="col-span-12 md:col-span-4 flex flex-col gap-6">
+                    <!-- Origin Chart -->
+                    <div class="glass-panel p-6 flex flex-col">
+                         <h4 class="font-bold text-slate-700 mb-4 flex items-center gap-2">
+                            <i class="fa-solid fa-bullseye text-red-500"></i> Origem dos Leads
+                        </h4>
+                        <div class="h-64 relative">
+                            <canvas id="chartOrigem"></canvas>
+                        </div>
+                         <div class="mt-4 space-y-2">
+                            <div v-for="stat in statsPorOrigem" :key="stat.nome" class="flex justify-between items-center text-xs border-b border-slate-50 pb-1 last:border-0">
+                                <span class="font-bold text-slate-600">{{ stat.nome }}</span>
+                                <span class="text-slate-400">{{ stat.total }} leads (<span class="text-green-600">{{ stat.taxa }}%</span>)</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Ranking Consultants -->
+                    <div class="glass-panel p-6 flex-1">
+                         <h4 class="font-bold text-slate-700 mb-4 flex items-center gap-2">
+                            <i class="fa-solid fa-trophy text-yellow-500"></i> Top Vendedores
+                        </h4>
+                        <div class="space-y-4">
+                            <div v-for="(consultor, index) in rankingConsultores" :key="index" class="flex items-center gap-3">
+                                <div class="w-8 h-8 rounded-full flex items-center justify-center font-bold text-xs text-white shadow-md"
+                                     :class="index === 0 ? 'bg-yellow-400' : (index === 1 ? 'bg-slate-400' : (index === 2 ? 'bg-orange-400' : 'bg-slate-200 text-slate-500'))">
+                                    {{ index + 1 }}º
+                                </div>
+                                <div class="flex-1">
+                                    <p class="font-bold text-slate-700 text-sm">{{ consultor.nome }}</p>
+                                    <div class="w-full bg-slate-100 rounded-full h-1.5 mt-1">
+                                        <div class="bg-blue-500 h-1.5 rounded-full" :style="{width: consultor.conversao + '%'}"></div>
+                                    </div>
+                                </div>
+                                <div class="text-right">
+                                     <p class="font-bold text-slate-800 text-xs">{{ consultor.fechados }} <span class="text-[9px] text-slate-400 uppercase">Vendas</span></p>
+                                     <p class="text-[9px] text-green-500 font-bold">{{ consultor.conversao }}% conv.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- NOVA TELA: TAREFAS DO COORDENADOR -->
             <div v-if="view === 'tarefas'" class="max-w-5xl mx-auto w-full animate-fade-in">
                 
